--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ p.branddesc {
     border-top: 1px solid white;
     border-bottom: 1px solid white;
 }
+.menuchild>a {
+    color: white;
+    text-decoration: none;
+}
 .line {
     width: 100%;
     height: 35px;
@@ -84,4 +88,62 @@ p.branddesc {
     padding-bottom: 20px;
     padding-right: 20px;
     margin-top: 2%;
+}
+.h1title {
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-size: 22px;
+    color: #3b5998;
+    position:relative;
+}
+.h1title:before {
+    content: "\f126";
+    font-family: FontAwesome;
+    margin-right: 10px;
+}
+.h1title:after {
+    content: "";
+    display: flex;
+    width: 100px;
+    border: 1px solid #3b5998;
+    margin-left:2%;
+}
+.row.thongso>div {
+    width: 23.5%;
+    margin-right: 1%;
+    height: auto;
+}
+.row.thongso>div.othunhat {
+    background-color: #a52626;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+.row.thongso>div.othuhai {
+    background-color: #26a54c;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+.row.thongso>div.othuba {
+    background-color: #265aa5;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+.row.thongso>div.othutu {
+    background-color: #6726a5;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+.row.thongso>div>p:first-child {
+    font-size: 4em;
+    font-weight: bolder;
+}
+span.luuy {
+    font-style: italic;
+    display: inline-block;
+    float: right;
+    font-size: 12px;
 }
